--- a/tex/models/strategic.tex
+++ b/tex/models/strategic.tex
@@ -17,25 +17,19 @@ This kind of model closely resembles a variant of the multi-compartment multi-kn
 	& \textbf{Meta variables:} \notag\\
 	& \ElementScheduler \in \SetScheduler \notag\\
 	& \tau \in [0, \infty] \notag\\
-	& \textbf{Minimize:} \notag                                                                                                                                                                                                                                                                                \\
-	& \sum_{\ElementWorkOrder \in \SetWorkOrder{}} \sum_{\ElementPeriod \in \SetPeriod} \ParStrategicValue \cdot \VarStrategicWorkOrderAssignment{\ElementWorkOrder}{\ElementPeriod}                                                                                                                           \\ 
-	& + \sum_{\ElementPeriod \in \SetPeriod} \sum_{\ElementResource \in \SetResource} \ParStrategicPenalty \cdot \VarStrategicExcess                                                                                                                                                                           \\
-	& + \sum_{\ElementPeriod \in \SetPeriod} \sum_{\ElementWorkOrder1 \in \SetWorkOrder{}} \sum_{\ElementWorkOrder2 \in \SetWorkOrder{}} \notag                                                                                                                                                                \\ 
-	& \quad \ParClusteringValue \cdot \VarStrategicWorkOrderAssignment{\ElementWorkOrder1}{\ElementPeriod} \cdot \VarStrategicWorkOrderAssignment{\ElementWorkOrder2}{\ElementPeriod}                                                                                 \label{eqn:objective_function_strategic} \\
-	& \textbf{Subject to:} \notag                                                                                                                                                                                                                                                                              \\
-	& \sum_{\ElementWorkOrder \in \SetWorkOrder{}} \ParStrategicWorkOrderWeight \cdot \VarStrategicWorkOrderAssignment{\ElementWorkOrder}{\ElementPeriod} \notag                                                                                                                                               \\ 
-	& \quad \leq \ \ParStrategicResource + \VarStrategicExcess \notag                                                                                                                                                                                                                                          \\ 
-	& \quad \forall \ElementPeriod \in \SetPeriod \quad \forall \ElementResource \in \SetResource                                                                                                                  \label{eqn:capacity_constraint}                                                             \\
-	& \sum_{\ElementWorkOrder \in \SetWorkOrder{}} \VarStrategicWorkOrderAssignment{\ElementWorkOrder}{\ElementPeriod} = 1 \notag                                                                                                                                                                              \\
-	& \quad \forall \ElementPeriod \in \SetPeriod                      \label{eqn:single_workorder_constraint}                                                                                                                                                                                                 \\
-	& \VarStrategicWorkOrderAssignment{\ElementWorkOrder}{\ElementPeriod} = 0 \notag                                                                                                                                                                                                                           \\
-	& \quad \forall (\ElementWorkOrder, \ElementPeriod) \in \ParStrategicExclude                          \label{eqn:exclusion_constraint}                                                                                                                                                                     \\
-	& \VarStrategicWorkOrderAssignment{\ElementWorkOrder}{\ElementPeriod} = 1 \notag                                                                                                                                                                                                                           \\ 
-	& \quad \forall (\ElementWorkOrder, \ElementPeriod) \in \ParStrategicInclude                          \label{eqn:inclusion_constraint}                                                                                                                                                                     \\
-	& \VarStrategicWorkOrderAssignment{\ElementWorkOrder}{\ElementPeriod} \in \{0, 1\} \notag                                                                                                                                                                                                                  \\
-	& \quad \forall \ElementWorkOrder \in \SetWorkOrder{} \quad \forall \ElementPeriod \in \SetPeriod     \label{eqn:x_integrality_constraint}                                                                                                                                                                 \\ 
-	& \VarStrategicExcess \in \mathbb{R}^{+} \notag                                                                                                                                                                                                                                                            \\ 
-	& \quad \forall \ElementPeriod \in \SetPeriod \quad \forall \ElementResource \in \SetResource                           \label{eqn:p_non_negativity_constraint}                                                                                                                                            \\ 
+	& \textbf{Minimize:} \notag                                                                                                                                                        \\
+	& \sum_{\ElementWorkOrder \in \SetWorkOrder{}} \sum_{\ElementPeriod \in \SetPeriod} \ParStrategicValue \cdot \VarStrategicWorkOrderAssignment{\ElementWorkOrder}{\ElementPeriod}  \\ 
+	& + \sum_{\ElementPeriod \in \SetPeriod} \sum_{\ElementResource \in \SetResource} \ParStrategicPenalty \cdot \VarStrategicExcess                                                   \\
+	& + \sum_{\ElementPeriod \in \SetPeriod} \sum_{\ElementWorkOrder1 \in \SetWorkOrder{}} \sum_{\ElementWorkOrder2 \in \SetWorkOrder{}} \notag                                       \\ 
+	& \quad \ParClusteringValue \cdot \VarStrategicWorkOrderAssignment{\ElementWorkOrder1}{\ElementPeriod} \cdot \VarStrategicWorkOrderAssignment{\ElementWorkOrder2}{\ElementPeriod}  \\
+	& \textbf{Subject to:} \notag                                                                                                                                                      \\
+	& \sum_{\ElementWorkOrder \in \SetWorkOrder{}} \ParStrategicWorkOrderWeight \cdot \VarStrategicWorkOrderAssignment{\ElementWorkOrder}{\ElementPeriod} \notag                      \\ 
+	& \quad \leq \ \ParStrategicResource + \VarStrategicExcess \notag                                                                          \quad \forall \ElementPeriod \in \SetPeriod \quad \forall \ElementResource \in \SetResource                                                                                      \\
+	& \sum_{\ElementWorkOrder \in \SetWorkOrder{}} \VarStrategicWorkOrderAssignment{\ElementWorkOrder}{\ElementPeriod} = 1 \notag              \quad \forall \ElementPeriod \in \SetPeriod                                                                                                                                      \\
+	& \VarStrategicWorkOrderAssignment{\ElementWorkOrder}{\ElementPeriod} = 0 \notag                                                           \quad \forall (\ElementWorkOrder, \ElementPeriod) \in \ParStrategicExclude                                                                                                       \\
+	& \VarStrategicWorkOrderAssignment{\ElementWorkOrder}{\ElementPeriod} = 1 \notag                                                           \quad \forall (\ElementWorkOrder, \ElementPeriod) \in \ParStrategicInclude                                                                                                       \\
+	& \VarStrategicWorkOrderAssignment{\ElementWorkOrder}{\ElementPeriod} \in \{0, 1\} \notag                                                  \quad \forall \ElementWorkOrder \in \SetWorkOrder{} \quad \forall \ElementPeriod \in \SetPeriod                                                                                 \\ 
+	& \VarStrategicExcess \in \mathbb{R}^{+} \notag                                                                                            \quad \forall \ElementPeriod \in \SetPeriod \quad \forall \ElementResource \in \SetResource                                                                                     \\ 
 	& \VarMetaTime \in  [0, \infty] 
 \end{alignat}
 
